Fri Jan  1 12:05:53 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (remove_unreachable_chunk): remove unreferred label
	  to optimize away unreachable chunk.

Fri Jan  1 11:42:57 2016  James Edward Gray II  <james@graysoftinc.com>

	* lib/csv.rb (CSV): Add a liberal_parsing option.
	  Patch by Braden Anderson. [#11839]
	* test/csv/test_features.rb:  test liberal_parsing

Fri Jan  1 10:27:28 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/mkconfig.rb (RbConfig): prefix SDKROOT to oldincludedir
	  not includedir, the latter is outside the ruby installation.
	  [ruby-core:72496] [Bug #11881]

Fri Jan  1 08:53:02 2016  Yuki Kurihara  <co000ri@gmail.com>

	* test/ruby/test_lazy_enumerator.rb (test_take_bad_arg): Add test
	  code in case of Enumerator::Lazy#take called with negative number.
	  [ruby-dev:49467] [Bug #11933]

Fri Jan  1 05:06:20 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_here_document): update indent for each line in
	  indented here document with single-quotes.
	  [ruby-core:72479] [Bug #11871]

Fri Jan  1 03:26:44 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/ostruct.rb (freeze): define deferred accessors before
	  freezing to get rid of an error when just reading frozen
	  OpenStruct.

Thu Dec 31 14:36:45 2015  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/ostruct.rb: Fix new_ostruct_member to correctly avoid
	  redefinition [#11901]

Thu Dec 31 02:45:12 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/ruby/test_module.rb (test_classpath): r53376 may change
	  the order of m.constants.
	  `make TESTS='-v ruby/test_class.rb ruby/test_module.rb' test-all`
	  may fail after that.
	  http://rubyci.s3.amazonaws.com/tk2-243-31075/ruby-trunk/log/20151230T164202Z.log.html.gz

Thu Dec 31 02:20:00 2015  Benoit Daloze  <eregontp@gmail.com>

	* common.mk (help): Fix typo.

Wed Dec 30 20:53:09 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
